--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,112 +13,63 @@ on:
       - dev
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  release:
+    types:
+      - published
 
 jobs:
-  flake8-lint:
+  build_wheels:
+    name: Build readlif
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macos-13
+          - macos-14
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pypa/cibuildwheel@v2.19
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./wheelhouse/*.whl
+
+  make_sdist:
+    name: Make SDist
     runs-on: ubuntu-latest
-    name: flake8
     steps:
-      - name: Check out source repository
-        uses: actions/checkout@v2
-      - name: Set up Python environment
-        uses: actions/setup-python@v1
-        with:
-          python-version: "3.8"
-      - name: flake8
-        uses: py-actions/flake8@v1
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-  partial_test: # Don't download full images for non-latest python
-    runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        shell: bash
-    strategy:
-      matrix:
-        os:
-          - 'macos-10.15'
-          # - 'macos-11.0'
-          - 'ubuntu-18.04'
-          - 'ubuntu-20.04'
-          - 'windows-2019'
-        python-version:
-          - '3.6'
-          - '3.7'
-          - '3.8'
-          - 'pypy-3.7'
+    - name: Build SDist
+      run: pipx run build --sdist
 
-    steps:
-      # Setup steps
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      # Install tox and tox plugin
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox tox-gh-actions
-      - name: Test with tox
-        run: tox
-
-  full_test: # Full test-suite for latest python
-    runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        shell: bash
-    strategy:
-      matrix:
-        os:
-          - 'macos-10.15'
-          # - 'macos-11.0'
-          - 'ubuntu-18.04'
-          - 'ubuntu-20.04'
-          - 'windows-2019'
-        python-version:
-          - '3.9'
-
-    steps:
-      # Setup steps
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      # Install tox and tox plugin
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox tox-gh-actions
-      - name: Test with tox
-        env:
-          READLIF_TEST_DL_PASSWD: ${{ secrets.READLIF_TEST_DL_PASSWD }}
-        run: tox
-
+    - uses: actions/upload-artifact@v4
+      with:
+        name: cibw-sdist
+        path: dist/*.tar.gz
 
   publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: [build_wheels, make_sdist]
     runs-on: ubuntu-latest
-    name: Publish
+    environment:
+      name: pypi
+      url: https://pypi.org/p/readlif
+    permissions:
+      id-token: write
+    if: github.event_name == 'release' && github.event.action == 'published'
     steps:
-      - name: Check out source repository
-        uses: actions/checkout@v2
-      - name: Set up Python environment
-        uses: actions/setup-python@v1
-        with:
-          python-version: "3.8"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install wheel
-      - name: Build package
-        run: python setup.py sdist bdist_wheel
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@v1.4.1
-        with:
+    - uses: actions/download-artifact@v4
+      with:
+        pattern: cibw-*
+        path: dist
+        merge-multiple: true
+
+    - uses: pypa/gh-action-pypi-publish@release/v1
+      with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          repository_url: https://upload.pypi.org/legacy/
-          #password: ${{ secrets.PYPI_TEST_API_TOKEN }}
-          #repository_url: https://test.pypi.org/legacy/
